--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/masked-view": "^0.1.6",
     "axios": "^0.19.2",
     "immer": "^5.3.6",
+    "mem": "^6.0.1",
     "moment": "^2.24.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
