--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-extra-dimensions-android": "^1.2.5",
+    "react-native-fast-image": "^7.0.2",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-indicators": "^0.17.0",
+    "react-native-looped-carousel": "^0.1.13",
     "react-native-modal": "^11.5.3",
     "react-native-onesignal": "^3.6.4",
     "react-native-reanimated": "^1.7.0",
