--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.24.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-communications": "^2.2.1",
     "react-native-extra-dimensions-android": "^1.2.5",
     "react-native-fast-image": "^7.0.2",
     "react-native-gesture-handler": "^1.6.0",
