--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "^0.1.6",
     "axios": "^0.19.2",
+    "buffer": "^5.4.3",
+    "events": "^3.1.0",
     "immer": "^5.3.6",
     "mem": "^6.0.1",
     "moment": "^2.24.0",
@@ -42,7 +44,10 @@
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^5.0.1"
+    "stream": "0.0.2",
+    "styled-components": "^5.0.1",
+    "timers": "^0.1.1",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@babel/core": "7.8.4",
