--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-screens": "^2.0.0-beta.4",
     "react-native-splash-screen": "^3.2.0",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-webview": "^8.1.2",
     "react-navigation": "^4.1.1",
     "react-navigation-stack": "^2.1.1",
     "react-navigation-tabs": "^2.7.0",
