--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-indicators": "^0.17.0",
     "react-native-looped-carousel": "^0.1.13",
     "react-native-maps": "0.26.1",
+    "react-native-maps-directions": "^1.7.3",
     "react-native-modal": "^11.5.3",
     "react-native-onesignal": "^3.6.4",
     "react-native-reanimated": "^1.7.0",
