--- a/android/build.gradle
+++ b/android/build.gradle
@@ -23,6 +23,8 @@ buildscript {
 allprojects {
     repositories {
         mavenLocal()
+        google()
+        jcenter()
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url("$rootDir/../node_modules/react-native/android")
@@ -31,9 +33,10 @@ allprojects {
             // Android JSC is installed from npm
             url("$rootDir/../node_modules/jsc-android/dist")
         }
-
-        google()
-        jcenter()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
         maven { url 'https://jitpack.io' }
     }
 }
