--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-extra-dimensions-android": "^1.2.5",
     "react-native-fast-image": "^7.0.2",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-image-crop-picker": "^0.28.0",
     "react-native-indicators": "^0.17.0",
     "react-native-looped-carousel": "^0.1.13",
     "react-native-maps": "0.26.1",
