--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-safe-area-view": "^1.0.0",
     "react-native-screens": "^2.0.0-beta.4",
     "react-native-splash-screen": "^3.2.0",
+    "react-native-star-rating": "^1.1.0",
     "react-native-swiper": "^1.6.0-nightly.5",
     "react-native-vector-icons": "^6.6.0",
     "react-native-webview": "^8.1.2",
