--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-splash-screen": "^3.2.0",
     "react-native-star-rating": "^1.1.0",
     "react-native-swiper": "^1.6.0-nightly.5",
+    "react-native-switch-pro": "^1.0.4",
     "react-native-vector-icons": "^6.6.0",
     "react-native-webview": "^8.1.2",
     "react-navigation": "^4.1.1",
