--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.19.2",
     "buffer": "^5.4.3",
     "events": "^3.1.0",
+    "iamport-react-native": "^1.4.4",
     "immer": "^5.3.6",
     "mem": "^6.0.1",
     "moment": "^2.24.0",
