--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
       android:name=".MainApplication"
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
-      android:allowBackup="false"
+      android:allowBackup="true"
       android:theme="@style/AppTheme"
       android:usesCleartextTraffic="true">
       <activity
@@ -30,6 +30,9 @@
       <meta-data
         android:name="com.google.android.geo.API_KEY"
         android:value="AIzaSyAU8s4zwd-jxcptDZLSkGSJW6AQOYg-dR0"/>
+        <meta-data
+          android:name="com.hansung.TeamFour"
+          android:value="b33daec53794a5396dee77698df5fad2" />
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
     </application>
 
