--- a/android/build.gradle
+++ b/android/build.gradle
@@ -38,5 +38,6 @@ allprojects {
             name 'Google'
         }
         maven { url 'https://jitpack.io' }
+        maven { url 'http://devrepo.kakao.com:8088/nexus/content/groups/public/' }
     }
 }
