--- a/ios/Podfile
+++ b/ios/Podfile
@@ -33,6 +33,7 @@ target 'cloneApp' do
   pod 'DoubleConversion', :podspec => '../node_modules/react-native/third-party-podspecs/DoubleConversion.podspec'
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
+  pod 'KakaoOpenSDK', '~> 1.21.0' # append this line
 
 
 
