--- a/android/build.gradle
+++ b/android/build.gradle
@@ -38,6 +38,8 @@ allprojects {
             name 'Google'
         }
         maven { url 'https://jitpack.io' }
+        // test
+        mavenCentral()
         maven { url 'http://devrepo.kakao.com:8088/nexus/content/groups/public/' }
     }
 }
