--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@actbase/react-native-kakao-link": "^1.0.5",
     "@react-native-community/async-storage": "^1.7.1",
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "^0.1.6",
@@ -30,6 +31,7 @@
     "react-native-gesture-handler": "^1.6.1",
     "react-native-image-crop-picker": "^0.28.0",
     "react-native-indicators": "^0.17.0",
+    "react-native-kakao-links": "^1.0.6",
     "react-native-looped-carousel": "^0.1.13",
     "react-native-maps": "0.26.1",
     "react-native-maps-directions": "^1.7.3",
