--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
       android:launchMode="singleTop"
-      android:allowBackup="true"
+      android:allowBackup="false"
       android:theme="@style/AppTheme"
       android:usesCleartextTraffic="true">
       <activity
